Add Right Sidebar to Homepage

--- a/index.html
+++ b/index.html
@@ -44,71 +44,58 @@
             </div>
         </div>
     </div>
-    <div class="etched-pattern">
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="nav">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/about/staff/">Staff</a></li>
-                                <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
-                                <li><a href="/about/history/">Parish History</a></li>
-                                <li><a href="javascript:void(0);" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="/about/directions/">Directions</a></li>
-                                <li><a href="/about/contact/">Contact</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/faith-formation/elementary/">Pre-K thru 5th Grade</a></li>
-                                <li><a href="/faith-formation/high-school/">6th thru 12th Grade</a></li>
-                                <li><a href="/faith-formation/adult/">Adult Education</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="/faith-formation/rcia/">RCIA</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/sacraments/">Sacraments</a></li>
-                        <li><a href="/calendar/">Events Calendar</a></li>
-                        <li><a href="/bulletins/">Bulletins</a></li>
-                        <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="nav">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
             </div>
-            <!-- /.container-fluid -->
-        </nav>
-        <div class="container">
-            <div class="upcoming-events col-md-2">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/about/staff/">Staff</a></li>
+                            <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
+                            <li><a href="/about/history/">Parish History</a></li>
+                            <li><a href="javascript:void(0);" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/about/directions/">Directions</a></li>
+                            <li><a href="/about/contact/">Contact</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/faith-formation/elementary/">Pre-K thru 5th Grade</a></li>
+                            <li><a href="/faith-formation/high-school/">6th thru 12th Grade</a></li>
+                            <li><a href="/faith-formation/adult/">Adult Education</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/faith-formation/rcia/">RCIA</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/sacraments/">Sacraments</a></li>
+                    <li><a href="/calendar/">Events Calendar</a></li>
+                    <li><a href="/bulletins/">Bulletins</a></li>
+                    <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2">
                 <!--   </ul> -->
                 <div class="span3 fullWidth767">
                     <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/" class="upcoming-events-subtext">View Full Calendar</a> </div>
-                <div class="photo-gallery">
-                    <h3>Photo Gallery</h3> <span id="random_image">
-  <script type="text/javascript"
-      src="//icgallery.flexstart.me/piwigo-random-backend.php"
-      async>
-  </script>
-                    </span>
-                    <a href="https://icgallery.flexstart.me/">
-                        <p>View and submit photos from recent parish activities</p>
-                    </a>
-                </div>
-                <div class="social-media">
-                    <h3>Follow us on social media!</h3> <a href="https://www.facebook.com/Millhousen/" title="Facebook"><span class="fa fa-facebook-square fa-2x"></span></a> <a href="https://plus.google.com/101600092827744209060" title="Google"><span class="fa fa-google fa-2x"></span></a> </div>
                 <div class="daily-readings">
                     <h3>Daily Readings</h3>
                     <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" style="display: block;"></iframe>
                 </div>
             </div>
-            <div class="page-content co-md-6">
+            <div class="col-md-8">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -116,7 +103,7 @@
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active"> <img src="/img/church2.jpg" alt="Church History">
+                        <div class="item active"> <img src="/img/modern-church.jpg" alt="Church History">
                             <div class="container">
                                 <div class="carousel-caption">
                                     <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
@@ -167,6 +154,26 @@
                 <h3>Lorem 2</h3>
                 <p>Aenean luctus tempor sodales. Sed tempus, magna at elementum suscipit, leo lorem tempor sem, tempor eleifend dui mi sit amet massa. Nunc nec libero condimentum, lobortis nisl in, pretium dui. Vestibulum at aliquet velit, sed fringilla metus. Proin molestie et mauris quis sodales. Donec dui risus, euismod volutpat mauris at, elementum varius nibh. Curabitur rhoncus augue aliquet neque semper, et iaculis turpis tincidunt. Maecenas consectetur accumsan nisl a gravida. Quisque pellentesque in justo eu rhoncus. Ut sodales erat sit amet turpis scelerisque, nec tincidunt nibh sollicitudin. Aenean scelerisque porta libero, quis sagittis augue facilisis sit amet. Proin a purus nec metus aliquam suscipit. Nunc ut quam ac risus pulvinar commodo. Nulla facilisi. Cras non posuere magna, vel commodo orci. Maecenas non dapibus nisi, et maximus urna. </p>
             </div>
+            <div class="col-md-2">
+                <!--   </ul> -->
+                <div class="photo-gallery">
+                    <h3>Photo Gallery</h3> <span id="random_image">
+  <script type="text/javascript"
+      src="//icgallery.flexstart.me/piwigo-random-backend.php"
+      async>
+  </script>
+                    </span>
+                    <a href="https://icgallery.flexstart.me/">
+                        <p>View and submit photos from recent parish activities</p>
+                    </a>
+                </div>
+                <div class="social-media">
+                    <h3>Like us on Facebook</h3>
+                    <div class="fb-page" data-href="https://www.facebook.com/Millhousen/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/Millhousen/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Millhousen/">Millhousen Immaculate Conception Catholic Church</a></blockquote>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="footer">
@@ -195,6 +202,17 @@
             , pastHeading: '<h2>Past events</h2>'
             , format: ['<h4>', '*summary*', '</h4>', '*date*']
         });
+    </script>
+    <div id="fb-root"></div>
+    <script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
