Added a column shift

--- a/index.html
+++ b/index.html
@@ -86,16 +86,7 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2">
-                <!--   </ul> -->
-                <div class="span3 fullWidth767">
-                    <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/" class="upcoming-events-subtext">View Full Calendar</a> </div>
-                <div class="daily-readings">
-                    <h3>Daily Readings</h3>
-                    <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" style="display: block;"></iframe>
-                </div>
-            </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-md-push-2 page-content">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -154,7 +145,15 @@
                 <h3>Lorem 2</h3>
                 <p>Aenean luctus tempor sodales. Sed tempus, magna at elementum suscipit, leo lorem tempor sem, tempor eleifend dui mi sit amet massa. Nunc nec libero condimentum, lobortis nisl in, pretium dui. Vestibulum at aliquet velit, sed fringilla metus. Proin molestie et mauris quis sodales. Donec dui risus, euismod volutpat mauris at, elementum varius nibh. Curabitur rhoncus augue aliquet neque semper, et iaculis turpis tincidunt. Maecenas consectetur accumsan nisl a gravida. Quisque pellentesque in justo eu rhoncus. Ut sodales erat sit amet turpis scelerisque, nec tincidunt nibh sollicitudin. Aenean scelerisque porta libero, quis sagittis augue facilisis sit amet. Proin a purus nec metus aliquam suscipit. Nunc ut quam ac risus pulvinar commodo. Nulla facilisi. Cras non posuere magna, vel commodo orci. Maecenas non dapibus nisi, et maximus urna. </p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 col-md-pull-8 sidebar">
+                <!--   </ul> -->
+                <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/" class="upcoming-events-subtext">View Full Calendar</a>
+                <div class="daily-readings">
+                    <h3>Daily Readings</h3>
+                    <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" style="display: block;"></iframe>
+                </div>
+            </div>
+            <div class="col-md-2 sidebar">
                 <!--   </ul> -->
                 <div class="photo-gallery">
                     <h3>Photo Gallery</h3> <span id="random_image">
