--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Raleway:200,400,600" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -28,13 +28,13 @@
 <body>
     <div id="outdated"></div>
     <div class="row branding-header">
-        <div class="col-md-3 brand-left"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
-        <div class="col-md-6">
+        <div class="col-md-2 brand-left"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
+        <div class="col-md-8">
             <div class="brand-txt">
                 <h1>Immaculate Conception Church</h1>
                 <h2>Millhousen, Indiana</h2> </div>
         </div>
-        <div class="col-md-3 brand-right">
+        <div class="col-md-2 brand-right">
             <div class="quick-info">
                 <ul>
                     <li>PLC: Sister Donna Prickel</li>
@@ -84,51 +84,72 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8 col-md-push-2 page-content">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active"> <img src="/img/modern-church.jpg" alt="Church History">
-                            <div class="container">
-                                <div class="carousel-caption">
-                                    <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
-                                    <a href="/about/history/">
-                                        <button type="button" class="btn btn-default">Learn More About Our History</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item"> <img src="https://images.unsplash.com/photo-1474816734820-13ad2a6ba010?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=dckbo-9o7ga-josh-applegate.jpg&s=5f62c008603875492635fce6f149b805" alt="Church History">
-                            <div class="container">
-                                <div class="carousel-caption">
-                                    <p>Join us for Mass every Sunday at 8 AM!</p>
-                                    <a href="/about/directions/">
-                                        <button type="button" class="btn btn-default">Get Directions</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item"> <img src="/img/fr-dan-speaker.jpg" alt="Parish Mission">
-                            <div class="container">
-                                <div class="carousel-caption">
-                                    <p>Hosting inspriational speakers to brighten your life</p>
-                                    <a href="/faith-formation/adult/">
-                                        <button type="button" class="btn btn-default">View Upcoming Formation Events</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <div class="img-slide1">
+                    <div class="carousel-caption">
+                        <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
+                        <a href="/about/history/">
+                            <button type="button" class="btn btn-default">Our History</button>
+                        </a>
                     </div>
-                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
                 </div>
-                <blockquote>
+            </div>
+            <div class="item">
+                <div class="img-slide2">
+                    <div class="carousel-caption">
+                        <p>Join us for Mass every Sunday at 8 AM!</p>
+                        <a href="/about/directions/">
+                            <button type="button" class="btn btn-default">Get Directions</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="img-slide3">
+                    <div class="carousel-caption">
+                        <p>Hosting inspriational speakers to brighten your life</p>
+                        <a href="/faith-formation/adult/">
+                            <button type="button" class="btn btn-default">View Upcoming Formation Events</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
+    </div>
+    <div class="stripe gray-stripe">
+        <div class="mission-statement">
+            <h2>Mission Statement</h2>
+            <p class="lead-line">We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834,</p>
+            <p> value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
+            <ul>
+                <li>living out Gospel values in our families and within the broader community</li>
+                <li>coming together to worship in faith</li>
+                <li>doing all in our power to insure that our parish doors remain open to everyone in our community as our parish is an integral part of this community</li>
+                <li>welcoming other to join us</li>
+                <li>continuing the faith formation of ourselves and our children</li>
+                <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
+                <li>and reaching out to share God's gifts with others</li>
+            </ul>
+        </div>
+    </div>
+    <div class="stripe white-stripe">
+        <div class="upcoming-events">
+            <ul id="events-upcoming" class="list1"></ul> <a href="calendar/" class="calendar-link">View Full Calendar</a> </div>
+    </div>
+    <!-- <div class="container-fluid">
+     <blockquote>
                     <h3>Mission Statement</h3>
                     <p>We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
                     <ul>
@@ -141,12 +162,12 @@
                         <li>and reaching out to share God's gifts with others</li>
                     </ul>
                 </blockquote>
-                <!-- Just some generic text to fill space until I have some better ideas for the home page -->
+                <!-- Just some generic text to fill space until I have some better ideas for the home page --
                 <h3>Lorem 2</h3>
                 <p>Aenean luctus tempor sodales. Sed tempus, magna at elementum suscipit, leo lorem tempor sem, tempor eleifend dui mi sit amet massa. Nunc nec libero condimentum, lobortis nisl in, pretium dui. Vestibulum at aliquet velit, sed fringilla metus. Proin molestie et mauris quis sodales. Donec dui risus, euismod volutpat mauris at, elementum varius nibh. Curabitur rhoncus augue aliquet neque semper, et iaculis turpis tincidunt. Maecenas consectetur accumsan nisl a gravida. Quisque pellentesque in justo eu rhoncus. Ut sodales erat sit amet turpis scelerisque, nec tincidunt nibh sollicitudin. Aenean scelerisque porta libero, quis sagittis augue facilisis sit amet. Proin a purus nec metus aliquam suscipit. Nunc ut quam ac risus pulvinar commodo. Nulla facilisi. Cras non posuere magna, vel commodo orci. Maecenas non dapibus nisi, et maximus urna. </p>
             </div>
             <div class="col-md-2 col-md-pull-8 sidebar">
-                <!--   </ul> -->
+                <!--   </ul> --
                 <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/" class="upcoming-events-subtext">View Full Calendar</a>
                 <div class="daily-readings">
                     <h3>Daily Readings</h3>
@@ -154,7 +175,7 @@
                 </div>
             </div>
             <div class="col-md-2 sidebar">
-                <!--   </ul> -->
+                <!--   </ul> --
                 <div class="photo-gallery">
                     <h3>Photo Gallery</h3> <span id="random_image">
   <script type="text/javascript"
@@ -173,10 +194,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div> -->
     <footer class="footer">
-        <div class="jagged-pattern"></div>
         <div class="container">
             <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
             <p class="text-muted pull-right"><a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> - Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
@@ -194,11 +213,11 @@
             , dayNames: false
             , pastTopN: -1
             , upcomingTopN: 5
-            , itemsTagName: 'li'
+            , itemsTagName: 'li class="event"'
             , upcomingSelector: '#events-upcoming'
             , pastSelector: '#events-past'
-            , upcomingHeading: '<h3>Upcoming events</h3>'
-            , pastHeading: '<h2>Past events</h2>'
+            , upcomingHeading: '<h2>Upcoming Events</h2>'
+            , pastHeading: '<h2>Past Events</h2>'
             , format: ['<h4>', '*summary*', '</h4>', '*date*']
         });
     </script>
