Shortened Mission, Added Staff

--- a/index.html
+++ b/index.html
@@ -131,73 +131,82 @@
     <div class="stripe gray-stripe">
         <div class="mission-statement">
             <h2>Mission Statement</h2>
-            <p class="lead-line">We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834,</p>
-            <p> value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
-            <ul>
-                <li>living out Gospel values in our families and within the broader community</li>
-                <li>coming together to worship in faith</li>
-                <li>doing all in our power to insure that our parish doors remain open to everyone in our community as our parish is an integral part of this community</li>
-                <li>welcoming other to join us</li>
-                <li>continuing the faith formation of ourselves and our children</li>
-                <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
-                <li>and reaching out to share God's gifts with others</li>
-            </ul>
+            <p class="lead-line">We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it.</p>
+            <a href="/about/mission-statement/">
+                <button type="button" class="btn btn-default">View the Full Statement</button>
+            </a>
         </div>
     </div>
     <div class="stripe white-stripe">
         <div class="upcoming-events">
             <ul id="events-upcoming" class="list1"></ul> <a href="calendar/" class="calendar-link">View Full Calendar</a> </div>
     </div>
-    <!-- <div class="container-fluid">
-     <blockquote>
-                    <h3>Mission Statement</h3>
-                    <p>We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
-                    <ul>
-                        <li>living out Gospel values in our families and within the broader community</li>
-                        <li>coming together to worship in faith</li>
-                        <li>doing all in our power to insure that our parish doors remain open to everyone in our community as our parish is an integral part of this community</li>
-                        <li>welcoming other to join us</li>
-                        <li>continuing the faith formation of ourselves and our children</li>
-                        <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
-                        <li>and reaching out to share God's gifts with others</li>
-                    </ul>
-                </blockquote>
-                <!-- Just some generic text to fill space until I have some better ideas for the home page --
-                <h3>Lorem 2</h3>
-                <p>Aenean luctus tempor sodales. Sed tempus, magna at elementum suscipit, leo lorem tempor sem, tempor eleifend dui mi sit amet massa. Nunc nec libero condimentum, lobortis nisl in, pretium dui. Vestibulum at aliquet velit, sed fringilla metus. Proin molestie et mauris quis sodales. Donec dui risus, euismod volutpat mauris at, elementum varius nibh. Curabitur rhoncus augue aliquet neque semper, et iaculis turpis tincidunt. Maecenas consectetur accumsan nisl a gravida. Quisque pellentesque in justo eu rhoncus. Ut sodales erat sit amet turpis scelerisque, nec tincidunt nibh sollicitudin. Aenean scelerisque porta libero, quis sagittis augue facilisis sit amet. Proin a purus nec metus aliquam suscipit. Nunc ut quam ac risus pulvinar commodo. Nulla facilisi. Cras non posuere magna, vel commodo orci. Maecenas non dapibus nisi, et maximus urna. </p>
-            </div>
-            <div class="col-md-2 col-md-pull-8 sidebar">
-                <!--   </ul> --
-                <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/" class="upcoming-events-subtext">View Full Calendar</a>
-                <div class="daily-readings">
-                    <h3>Daily Readings</h3>
-                    <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" style="display: block;"></iframe>
-                </div>
-            </div>
-            <div class="col-md-2 sidebar">
-                <!--   </ul> --
-                <div class="photo-gallery">
-                    <h3>Photo Gallery</h3> <span id="random_image">
+    <div class="stripe gray-stripe">
+        <h2>Our Staff</h2>
+        <div class="row">
+            <div class="col-md-4"> <img href="/img/sr-donna.jpg" alt="Sister Donna Prickel" height="200" />
+                <h4>Sister Donna Prickel</h4> </div>
+            <div class="col-md-4"> <img href="/img/fr-bill.jpg" alt="Father William Turner" height="200" />
+                <h4>Father Bill Turner</h4> </div>
+            <div class="col-md-4"><img href="/img/kathy-westrick.jpg" alt="Kathy Westrick" height="200" />
+                <h4>Kathy Westrick</h4></div>
+            <div class="col-md-6"><img href="/img/fr-john.jpg" alt="Father John Geis" height="200" />
+                <h4>Father John Geis</h4></div>
+            <div class="col-md-6"><img href="/img/sr-dianne.jpg" alt="Sister Dianne Kaimann" height="200" />
+                <h4>Sister Dianne Kaimann</h4></div>
+        </div>
+    </div>
+    <div class="stripe white-stripe">
+        <h2>Our Neighboring Parishes</h2> </div>
+    <div class="stripe gray-stripe">
+        <div class="community">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="photo-gallery">
+                        <h2>Photo Gallery</h2> <span id="random_image">
   <script type="text/javascript"
-      src="//icgallery.flexstart.me/piwigo-random-backend.php"
+      src="//icgallery.flexstart.me/piwigo-random-backend.php?maximages=9&size=square&target=_blank"
       async>
   </script>
                     </span>
-                    <a href="https://icgallery.flexstart.me/">
-                        <p>View and submit photos from recent parish activities</p>
-                    </a>
+                        <a href="https://icgallery.flexstart.me/">
+                            <button type="button" class="btn btn-default">Visit the Gallery</button>
+                        </a>
+                    </div>
                 </div>
-                <div class="social-media">
-                    <h3>Like us on Facebook</h3>
-                    <div class="fb-page" data-href="https://www.facebook.com/Millhousen/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                        <blockquote cite="https://www.facebook.com/Millhousen/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Millhousen/">Millhousen Immaculate Conception Catholic Church</a></blockquote>
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>Daily Readings</h4>
+                            <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
+                        </div>
+                        <div class="col-md-6">
+                            <h4>Search your faith!</h4>
+                            <form action="http://www.catholicsearch.net/q.php" method="get">
+                                <div style="background: #FFF; font: 11px/17px arial,sans-serif; width: 148px; border: 1px solid #DDD; text-align: center; padding: 4px 0;"><a href="http://www.catholicsearch.net" style="color: #03C; text-decoration: none;" title="Search 1000+ Catholic websites."><strong>Catholic Search Engine</strong></a>
+                                    <br />
+                                    <input type="text" name="q" style="width: 88px; margin: 3px 0;" />
+                                    <input style="width: 36px; margin: 3px 0;" type="submit" value="Go" />
+                                    <br /><span style="font: 9px/10px verdana,sans-serif;color:#777">Powered by Google</span></div>
+                            </form>
+                        </div>
+                        <div class="col-md-12">
+                            <iframe style="width: 90%; height: 325px; border: none; padding-top: 30px;" src="https://feed.mikle.com/widget/v2/23358/"></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="social-media">
+                        <h3>Like us on Facebook</h3>
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="420" height="450" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
+    </div>
     <footer class="footer">
         <div class="container">
-            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
+            <p class="text-muted pull-left">Developed and Hosted by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
             <p class="text-muted pull-right"><a href="http://www.iubenda.com/privacy-policy/8060938" target="_blank">Privacy Policy</a> - Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
         </div>
     </footer>
@@ -220,17 +229,6 @@
             , pastHeading: '<h2>Past Events</h2>'
             , format: ['<h4>', '*summary*', '</h4>', '*date*']
         });
-    </script>
-    <div id="fb-root"></div>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
