Solved Image Loading Problem

--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
     <div class="stripe gray-stripe">
         <h2>Our Staff</h2>
         <div class="row">
-            <div class="col-md-4"> <img href="img/sr-donna.jpg" alt="Sister Donna Prickel" height="200" />
+            <div class="col-md-4"> <img src="/img/sr-donna.jpg" alt="Sister Donna Prickel" height="200" />
                 <h4>Sister Donna Prickel</h4> </div>
-            <div class="col-md-4"> <img href="/img/fr-bill.jpg" alt="Father William Turner" height="200" />
+            <div class="col-md-4"> <img src="/img/fr-bill.jpg" alt="Father William Turner" height="200" />
                 <h4>Father Bill Turner</h4> </div>
-            <div class="col-md-4"><img href="https://millhousenchurch.flexstart.me/img/kathy-westrick.jpg" alt="Kathy Westrick" height="200" />
+            <div class="col-md-4"><img src="/img/kathy-westrick.jpg" alt="Kathy Westrick" height="200" />
                 <h4>Kathy Westrick</h4></div>
-            <div class="col-md-6"><img href="/img/fr-john.jpg" alt="Father John Geis" height="200"></img>
+            <div class="col-md-6"><img src="/img/fr-john.jpg" alt="Father John Geis" height="200" />
                 <h4>Father John Geis</h4></div>
-            <div class="col-md-6"><img href="/img/sr-dianne.jpg" alt="Sister Dianne Kaimann" height="200">
+            <div class="col-md-6"><img src="/img/sr-dianne.jpg" alt="Sister Dianne Kaimann" height="200" />
                 <h4>Sister Dianne Kaimann</h4></div>
         </div>
     </div>
