--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <body>
     <div id="outdated"></div>
     <div class="row branding-header">
-        <div class="col-md-2 brand-left"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
-        <div class="col-md-8">
+        <div class="col-lg-2 col-md-3 col-xs-2 brand-left"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
+        <div class="col-lg-8 col-md-6 col-xs-7 site-title">
             <div class="brand-txt">
                 <h1>Immaculate Conception Church</h1>
                 <h2>Millhousen, Indiana</h2> </div>
         </div>
-        <div class="col-md-2 brand-right">
+        <div class="col-lg-2 col-md-3 col-xs-3 brand-right">
             <div class="quick-info">
                 <ul>
                     <li>PLC: Sister Donna Prickel</li>
@@ -198,7 +198,7 @@
                 <div class="col-md-4">
                     <div class="social-media">
                         <h3>Like us on Facebook</h3>
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="420" height="450" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" scrolling="no" frameborder="0" allowTransparency="true" class="facebook-embed"></iframe>
                     </div>
                 </div>
             </div>
